- Improved and clean up single post based on latest Yudy changes (styles and margins/spacing) - Removed old thispost-style and thispost-style-mobile because it was causing issues with loading old styles - Changes post responsive class and add some cleanup/improvements

--- a/element-styles/this_post/this_post_default.css
+++ b/element-styles/this_post/this_post_default.css
@@ -2,32 +2,21 @@
     color: #ufc2;
     display: block;
     font-family: 'Oswald', Arial, sans-serif;
-    font-weight: 400;
+    font-weight: 300;
     line-height: 35px;
-    position: relative;
-    text-align: center!important;
+    text-align: right;
     text-transform: uppercase;
-    position:relative;
-    right:15px;
 }
 .post_date .date_part_0, .post_date .date_part_1 {
     display: block;
-    text-align: center;
-    text-transform: uppercase;
 }
 .post_date .date_part_0 {
     font-size: 30px;
-    font-weight: 300;
-    letter-spacing:0px;
-    margin-top:-5px;
-    text-align: center;
+    letter-spacing: 0px;
 }
 .post_date .date_part_1 {
     font-size: 13px;
-    font-weight: 300;
-    margin-top:-5px;
-    letter-spacing:1px;
-    text-align: center;
+    letter-spacing: 1px;
 }
 .upfront-postpart-title .post_title, .upfront-postpart-title .post_title a {
     color: #ufc7;
@@ -37,10 +26,6 @@
     letter-spacing: -0.2px;
     line-height: 1.3em;
     text-transform: uppercase;
-    padding-left:15px;
-}
-.post_author, .upfront-postpart-title .post_title {
-    margin-left:45px;
 }
 .upfront-postpart-title .post_title a:hover {
     color: #ufc5;
@@ -59,45 +44,31 @@
     color: #ufc5;
 }
 .upfront-postpart-author a.post_author, .post_author {
-    margin-top:-10px!important;
     position: relative;
 }
-.post_contents_wrapper.part-contents:before {
+.upfront-postpart-wrapper.part-contents:before {
     background: #ufc4;
     content: "";
     display: block;
     height: 1px;
-    margin: 10px 60px 0;
+    margin: 5px 60px 0;
     width: 100%;
+}
+.post_content h1, .post_content h2, .post_content h3, .post_content h6, .post_content p {
+    margin: 0 45px 40px;
+}
+.post_content h5, .post_content h4 {
+    margin: 0 45px 10px;
 }
 .post_content address, .post_content table, .post_content pre, .post_content cite, .post_content q, .post_content iframe, .post_content embed {
     margin-bottom: 45px;
 }
-
-.post_content h1 {
-    margin: 0 45px 45px!important;
-}
-
-.post_content h1, .post_content h2, .post_content h3, .post_content h6, .post_content p {
-    margin-bottom:40px!important;
-    margin-left:45px!important;
-    margin-right:45px!important;
-}
-
-.post_content h5, .post_content h4 {
-    margin: 0 45px 10px!important;
-}
-
 .post_content ul, .post_content ol {
-    padding-bottom: 25px!important;
-    padding-left:5px;
+    padding: 0 0 25px 5px;
 }
-
 .post_content ul li, .post_content ol li {
-    margin-bottom: 10px;
-    margin-right:45px
+    margin: 0 45px 10px 0;
 }
-
 .post_content > *:last-child {
     margin-bottom: 0;
 }
